--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,13 @@
     <groupId>com.nl.mo.session</groupId>
     <artifactId>sessionTimeout</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-
+    <packaging>jar</packaging>
+    <properties>
+        <java.version>21.0.2</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.plugin.version>3.10.0</maven.compiler.plugin.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.ehcache</groupId>
@@ -35,7 +40,6 @@
     </distributionManagement>
     <build>
         <plugins>
-            <!-- Configure maven-jar-plugin to create the JAR file -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -44,9 +48,18 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.example.MainClass</mainClass> <!-- Replace com.example.MainClass with your main class -->
+                            <mainClass>com.nl.mo.session.SessionManager
+                            </mainClass>
                         </manifest>
                     </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <mainClass>com.nl.mo.session.SessionManager</mainClass>
                 </configuration>
             </plugin>
         </plugins>
