--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,14 @@
                     <mainClass>com.nl.mo.session.SessionManager</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
